# guild

./: CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Makefile  README.md  build.rs  package-lock.json
agents/: git_workflow.py  guild_master.py  hero_runtime.py  mcp_builder.py  memory_manager.py  telegram_bot.py  test_git_workflow.py  test_integration.py  test_memory_manager.py
dashboard/: vite.config.ts
dashboard/public/assets/sprites/sliced/: sprites.json
dashboard/src/: App.tsx  api.ts  index.css
dashboard/src/components/: AnimatedSprite.tsx  GuildScene.tsx
dashboard/src/data/: mock.ts
dashboard/src/hooks/: usePolling.ts
dashboard/src/panels/: HeroPanel.tsx  LogPanel.tsx  MemoryPanel.tsx  ProjectPanel.tsx  QuestPanel.tsx
docs/: 01-overview.md  02-core-concepts.md  03-project-management.md  04-git-workflow.md  05-memory-system.md  06-guild-master.md  07-hero-lifecycle.md  08-skill-system.md  09-mcp-integration.md  10-conflict-resolution.md  11-telegram.md  12-cli.md  13-architecture.md  14-feature-scope.md  15-onboarding.md  16-error-handling.md  17-monetization.md  18-roadmap.md  19-risks.md  appendix-hero-classes.md  checklist.md  show-hn-draft.md
scripts/: render-exterior.mjs  render-tilemap.mjs  slice-sprites.mjs
src/: api.rs  db.rs  license.rs  main.rs  process_manager.rs
src/cli/: config.rs  goal.rs  hero.rs  init.rs  mcp.rs  memory.rs  mod.rs  project.rs  quest.rs  secret.rs  skill.rs  status.rs
