[package]
name = "guild"
version = "0.1.0"
edition = "2024"
description = "Self-hosted multi-agent development OS for solo developers"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
colored = "3"
dialoguer = "0.11"
libc = "0.2"
